--- a/rime_ice.dict.yaml
+++ b/rime_ice.dict.yaml
@@ -12,6 +12,7 @@ import_tables:
   - cn_dicts/tencent  # 腾讯词向量（大词库，部署时间较长）
   - cn_dicts/others   # 一些杂项
   - cn_dicts/math     # 数学相关
+  - cn_dicts/ladingzimu  # 拉丁字库
 
   # 建议把扩展词库放到下面，有重复词条时，最上面的权重生效
   # - mydict1           # 挂载配置目录下的 mydict1.dict.yaml 词库文件
